--- a/styles.css
+++ b/styles.css
@@ -1,136 +1,193 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+@font-face {
+  font-family: "Montserrat";
+  font-weight: 500;
+  src: url("/assets/fonts/montserrat-v30-latin-500.woff2");
 }
 
+@font-face {
+  font-family: "Montserrat";
+  font-weight: 700;
+  src: url("assets/fonts/montserrat-v30-latin-700.woff2");
+}
+
+@font-face {
+  font-family: "Fraunces";
+  font-weight: 700;
+  src: url("assets/fonts/fraunces-v37-latin-700.woff2");
+}
+
+/* ------------------- CSS Reset ------------------- */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+*:focus-visible {
+  outline: 0.125rem dotted green;
+  outline-offset: 0.125rem;
+}
+
+img,
+svg,
+picture {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  font: inherit;
+  color: inherit;
+}
+
+button {
+  cursor: pointer;
+}
+/* ------------------- Design Tokens ------------------- */
+:root {
+  --ff-montserrat: "Montserrat", sans-serif;
+
+  --clr-black: hsl(212, 21%, 14%);
+  --clr-grey: hsl(228, 12%, 48%);
+  --clr-cream: hsl(30, 38%, 92%);
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-green-500: hsl(158, 36%, 37%);
+  --clr-green-700: hsl(158, 42%, 18%);
+
+  --fs-xs: 0.75rem;
+  --fs-sm: 0.8125rem;
+  --fs-base: 0.875rem;
+  --fs-3xl: 2rem;
+
+  --fw-medium: 500;
+  --fw-bold: 700;
+}
+/* ------------------- End of Design Tokens ------------------- */
+
 body {
-    background-color: hsl(30, 38%, 92%);
-    min-height: 100vh;
-    font-family: "Montserrat", sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 16px;
+  background-color: hsl(30, 38%, 92%);
+  min-height: 100dvh;
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
 
 .card {
-    background-color: hsl(0, 0%, 100%);
-    max-width: 500px;
-    display: flex;
-    flex-wrap: wrap;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.card__img img{
-    display: block;
-    max-width: 100%;
+  background-color: hsl(0, 0%, 100%);
+  max-width: 31.25rem;
+  display: grid;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .card__content {
-    padding: 24px;
+  padding: 1.5rem;
 }
 
 .card__tag {
-    color: hsl(228, 12%, 48%);
-    text-transform: uppercase;
-    font-size: 0.75rem;
-    letter-spacing: 5px;
+  color: hsl(228, 12%, 48%);
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  letter-spacing: 5px;
 }
 
 .card__title {
-    color: hsl(212, 21%, 14%);
-    font-family: "Fraunces", sans-serif;
-    font-size: 2rem;
-    line-height: 2rem;
-    margin-top: 13px;
+  color: hsl(212, 21%, 14%);
+  font-family: "Fraunces", sans-serif;
+  font-size: 2rem;
+  line-height: 2rem;
+  margin-top: 13px;
 }
 
 .card__text {
-    color: hsl(228, 12%, 48%);
-    font-size: 0.875rem;
-    line-height: 1.375rem;
-    margin-top: 16px;
+  color: hsl(228, 12%, 48%);
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  margin-top: 16px;
 }
 
 .card__price {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-top: 24px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 24px;
 }
 
 .card__price-new {
-    color: hsl(158, 36%, 37%);
-    display: inline;
-    font-family: "Fraunces", sans-serif;
-    font-size: 2rem;
+  color: hsl(158, 36%, 37%);
+  display: inline;
+  font-family: "Fraunces", sans-serif;
+  font-size: 2rem;
 }
 
 .card__price-old {
-    color: hsl(228, 12%, 48%);
-    display: inline;
-    font-size: 0.8125rem;
-    text-decoration: line-through;
+  color: hsl(228, 12%, 48%);
+  display: inline;
+  font-size: 0.8125rem;
+  text-decoration: line-through;
 }
 
 .card__btn {
-    background-color: hsl(158, 36%, 37%);
-    color: hsl(0, 0%, 100%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    text-align: center;
-    border-radius: 8px;
-    padding: 15px 0;
-    margin-top: 16px;
+  background-color: hsl(158, 36%, 37%);
+  color: hsl(0, 0%, 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  border: none;
+  border-radius: 8px;
+  padding: 15px 0;
+  margin-top: 16px;
 }
 
 .card__btn:hover {
-    background-color: hsl(158, 36%, 17%);
+  background-color: hsl(158, 36%, 17%);
 }
 
 .card__btn-text {
-    font-size: 0.875rem;
-    font-weight: 700;
-    margin-left: 10px;
+  font-size: 0.875rem;
+  font-weight: 700;
+  margin-left: 10px;
 }
 
-
 @media (min-width: 700px) {
+  .card {
+    max-width: 600px;
+    grid-template-columns: 1fr 1fr;
+  }
 
-    .card {
-        max-width: 600px;
-    }
+  .card__content {
+    padding: 32px;
+  }
 
-    .card__content {
-        padding: 32px;
-    }
+  /* .card__img {
+    width: 50%;
+  } */
 
-    .card__img {
-        width: 50%;
-    }
+  /* .card__content {
+    width: 50%;
+  } */
 
-    .card__content {
-        width: 50%;
-    }
+  .card__title {
+    margin-top: 21px;
+  }
 
-    .card__title {
-        margin-top: 21px;
-    }
+  .card__text {
+    margin-top: 26px;
+  }
 
-    .card__text {
-        margin-top: 26px;
-    }
+  .card__price {
+    margin-top: 27px;
+  }
 
-    .card__price {
-        margin-top: 27px;
-    }
-
-    .card__btn {
-        margin-top: 26px;
-    }
+  .card__btn {
+    margin-top: 26px;
+  }
 }
