--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 }
 
 *:focus-visible {
-  outline: 0.125rem dotted green;
+  outline: 0.125rem dotted var(--clr-green-500);
   outline-offset: 0.125rem;
 }
 
@@ -34,8 +34,7 @@ img,
 svg,
 picture {
   display: block;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
 }
 
 button {
@@ -49,6 +48,7 @@ button {
 /* ------------------- Design Tokens ------------------- */
 :root {
   --ff-montserrat: "Montserrat", sans-serif;
+  --ff-fraunces: "Fraunces", serif;
 
   --clr-black: hsl(212, 21%, 14%);
   --clr-grey: hsl(228, 12%, 48%);
@@ -68,126 +68,118 @@ button {
 /* ------------------- End of Design Tokens ------------------- */
 
 body {
-  background-color: hsl(30, 38%, 92%);
+  background-color: var(--clr-cream);
   min-height: 100dvh;
-  font-family: "Montserrat", sans-serif;
+  font-family: var(--ff-montserrat);
+  font-weight: var(--fw-medium);
+  letter-spacing: 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 0.75rem;
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
-  max-width: 31.25rem;
+  background-color: var(--clr-white);
+  max-width: 32rem;
   display: grid;
   border-radius: 10px;
   overflow: hidden;
 }
 
+.card__img {
+  height: 100%;
+}
+
 .card__content {
-  padding: 1.5rem;
+  display: grid;
+  gap: 1.5rem;
+  padding: 2rem;
 }
 
 .card__tag {
-  color: hsl(228, 12%, 48%);
-  text-transform: uppercase;
-  font-size: 0.75rem;
+  color: var(--clr-grey);
+  font-size: var(--fs-xs);
+  line-height: 1.2;
   letter-spacing: 5px;
+  text-transform: uppercase;
 }
 
 .card__title {
-  color: hsl(212, 21%, 14%);
-  font-family: "Fraunces", sans-serif;
-  font-size: 2rem;
-  line-height: 2rem;
-  margin-top: 13px;
+  color: var(--clr-black);
+  font-family: var(--ff-fraunces);
+  font-size: var(--fs-3xl);
+  font-weight: var(--fw-bold);
+  line-height: 1;
 }
 
 .card__text {
-  color: hsl(228, 12%, 48%);
-  font-size: 0.875rem;
-  line-height: 1.375rem;
-  margin-top: 16px;
+  color: var(--clr-grey);
+  font-size: var(--fs-base);
+  line-height: 1.6;
 }
 
 .card__price {
   display: flex;
   align-items: center;
-  gap: 20px;
-  margin-top: 24px;
+  gap: 1rem;
 }
 
 .card__price-new {
-  color: hsl(158, 36%, 37%);
-  display: inline;
-  font-family: "Fraunces", sans-serif;
-  font-size: 2rem;
+  color: var(--clr-green-500);
+  font-family: var(--ff-fraunces);
+  font-size: var(--fs-3xl);
+  line-height: 1;
 }
 
 .card__price-old {
-  color: hsl(228, 12%, 48%);
-  display: inline;
-  font-size: 0.8125rem;
+  color: var(--clr-grey);
+  font-size: var(--fs-sm);
+  line-height: 1.2;
   text-decoration: line-through;
 }
 
 .card__btn {
-  background-color: hsl(158, 36%, 37%);
-  color: hsl(0, 0%, 100%);
+  background-color: var(--clr-green-500);
+  color: var(--clr-white);
+  font-size: var(--fs-base);
+  font-weight: var(--fw-bold);
+  line-height: 1.1;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  gap: 0.5rem;
   text-align: center;
   border: none;
   border-radius: 8px;
-  padding: 15px 0;
-  margin-top: 16px;
+  padding: 1rem 2rem;
+  transition: background-color 150ms ease-in-out;
 }
 
-.card__btn:hover {
-  background-color: hsl(158, 36%, 17%);
+.card__btn:hover,
+.card__btn:active {
+  background-color: var(--clr-green-700);
 }
 
-.card__btn-text {
-  font-size: 0.875rem;
-  font-weight: 700;
-  margin-left: 10px;
+.cart-icon {
+  width: 1rem;
+  height: 1rem;
+  flex-shrink: 0;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 48rem) {
   .card {
-    max-width: 600px;
+    max-width: 37.5rem;
     grid-template-columns: 1fr 1fr;
-  }
-
-  .card__content {
-    padding: 32px;
-  }
-
-  /* .card__img {
-    width: 50%;
-  } */
-
-  /* .card__content {
-    width: 50%;
-  } */
-
-  .card__title {
-    margin-top: 21px;
-  }
-
-  .card__text {
-    margin-top: 26px;
+    grid-template-rows: auto auto;
   }
 
   .card__price {
-    margin-top: 27px;
+    margin-top: 0.5rem;
   }
 
   .card__btn {
-    margin-top: 26px;
+    margin-top: 0.5rem;
   }
 }
